[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32"
csv = "1.3.0"
